# jem

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  InstallScript.cmake  LICENSE  Makefile  NEWS  README  README.md  THANKS  TODO  license.txt  sonar-project.properties
data/etc/jem/: virtuals.conf
data/etc/profile.d/: jem.csh  jem.sh
etc/profile.d/: jem.csh  jem.sh
include/: env_manager.h  file_parser.h  output_formatter.h  package.h  version.h  version.h.in  vm.h
lib/: env_manager.h  file_parser.h  output_formatter.h  vm.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
samples/etc/jem/virtuals.d/: jaf  javamail  jdk-with-com-sun  saaj-api  servlet-api-2.4  servlet-api-2.5  servlet-api-3.0  servlet-api-3.1  servlet-api-4.0  transaction-api
samples/usr/share/absolutelayout/: package.env
samples/usr/share/animal-sniffer-annotations/: package.env
samples/usr/share/ant-contrib/: package.env
samples/usr/share/ant-core/: package.env
samples/usr/share/ant-eclipse-ecj-4.4/: package.env
samples/usr/share/ant-eclipse-ecj-4.5/: package.env
samples/usr/share/ant-ivy/: package.env
samples/usr/share/ant-junit/: package.env
samples/usr/share/ant-nodeps/: package.env
samples/usr/share/ant-owanttask/: package.env
samples/usr/share/antlr/: package.env
samples/usr/share/antlr-3.5/: package.env
samples/usr/share/aopalliance-1/: package.env
samples/usr/share/aqute-jpm-clnt/: package.env
samples/usr/share/aqute-remote-3/: package.env
samples/usr/share/aqute-repository-3/: package.env
samples/usr/share/aqute-resolve-3/: package.env
samples/usr/share/aqute-services-services/: package.env
samples/usr/share/aqute-services-struct/: package.env
samples/usr/share/asm-1.5/: package.env
samples/usr/share/asm-3/: package.env
samples/usr/share/asm-4/: package.env
samples/usr/share/aspectwerkz-2/: package.env
samples/usr/share/bcel/: package.env
samples/usr/share/bcmail-1.45/: package.env
samples/usr/share/bcprov-1.45/: package.env
samples/usr/share/beansbinding/: package.env
samples/usr/share/berkeley-db-je/: package.env
samples/usr/share/bnd-3/: package.env
samples/usr/share/bndlib-3/: package.env
samples/usr/share/bsf-2.3/: package.env
samples/usr/share/bsh/: package.env
samples/usr/share/bytelist/: package.env
samples/usr/share/c3p0/: package.env
samples/usr/share/cglib-2.1/: package.env
samples/usr/share/cglib-3/: package.env
samples/usr/share/commons-beanutils-1.7/: package.env
samples/usr/share/commons-cli-1/: package.env
samples/usr/share/commons-codec/: package.env
samples/usr/share/commons-collections/: package.env
samples/usr/share/commons-compress/: package.env
samples/usr/share/commons-daemon/: package.env
samples/usr/share/commons-dbcp-2/: package.env
samples/usr/share/commons-digester/: package.env
samples/usr/share/commons-digester-3.2/: package.env
samples/usr/share/commons-discovery/: package.env
samples/usr/share/commons-el/: package.env
samples/usr/share/commons-fileupload/: package.env
samples/usr/share/commons-httpclient-3/: package.env
samples/usr/share/commons-io-1/: package.env
samples/usr/share/commons-lang-2.1/: package.env
samples/usr/share/commons-launcher/: package.env
samples/usr/share/commons-logging/: package.env
samples/usr/share/commons-modeler/: package.env
samples/usr/share/commons-net/: package.env
samples/usr/share/commons-pool/: package.env
samples/usr/share/commons-pool-2/: package.env
samples/usr/share/commons-validator/: package.env
samples/usr/share/commons-vfs/: package.env
samples/usr/share/deskzilla/: package.env
samples/usr/share/dom4j-1/: package.env
samples/usr/share/eclipse-ecj-4.4/: package.env
samples/usr/share/eclipse-ecj-4.5/: package.env
samples/usr/share/eclipse-javax-persistence-2/: package.env
samples/usr/share/edtftpj/: package.env
samples/usr/share/fastinfoset/: package.env
samples/usr/share/felix-framework/: package.env
samples/usr/share/felix-gogo-runtime/: package.env
samples/usr/share/felix-resolver/: package.env
samples/usr/share/fontbox-1.8/: package.env
samples/usr/share/glassfish-connector-api/: package.env
samples/usr/share/glassfish-hk2-api/: package.env
samples/usr/share/glassfish-hk2-locator/: package.env
samples/usr/share/glassfish-hk2-osgi-resource-locator/: package.env
samples/usr/share/glassfish-hk2-utils/: package.env
samples/usr/share/glassfish-persistence/: package.env
samples/usr/share/glassfish-servlet-api-2.5/: package.env
samples/usr/share/glassfish-transaction-api/: package.env
samples/usr/share/gnu-classpath-0.98/: package.env
samples/usr/share/gnu-regexp-1/: package.env
samples/usr/share/guava-19/: package.env
samples/usr/share/guice-4/: package.env
samples/usr/share/ha-jdbc-3/: package.env
samples/usr/share/hamcrest-core-1.3/: package.env
samples/usr/share/hamcrest-generator-1.3/: package.env
samples/usr/share/hsqldb/: package.env
samples/usr/share/icu4j-55/: package.env
samples/usr/share/iso-relax/: package.env
samples/usr/share/itext/: package.env
samples/usr/share/j2objc-annotations/: package.env
samples/usr/share/jakarta-oro-2.0/: package.env
samples/usr/share/jarjar-1/: package.env
samples/usr/share/java-dep-check/: package.env
samples/usr/share/java-getopt-1/: package.env
samples/usr/share/javacc/: package.env
samples/usr/share/javacup/: package.env
samples/usr/share/javahelp/: package.env
samples/usr/share/javassist-3/: package.env
samples/usr/share/javax-inject/: package.env
samples/usr/share/javax-security-auth-message/: package.env
samples/usr/share/javolution-4/: package.env
samples/usr/share/jax-rs-2/: package.env
samples/usr/share/jaxen-1.1/: package.env
src/: env_manager.c  file_parser.c  main.c  output_formatter.c  package.c  vm.c
tests/: cp_all_package_envs.sh  jem_jc_cmp_cp.sh  run-tests.sh  test.c
(+143 files in other folders)
